Fix gRPC ALPN negotiation by advertising h2 protocol